--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <script src="./js/task1.js"></script>
     <script src="./js/task2.js"></script>
+    <script src="./js/task3.js"></script>
 </body>
 </html>
