--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <script src="./js/task1.js"></script>
     <script src="./js/task2.js"></script>
     <script src="./js/task3.js"></script>
+    <script src="./js/task4.js"></script>
 </body>
 </html>
